added english and spanish recordings

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -75,6 +75,13 @@
     transition: all 0.2s ease-in-out;
 }
 
+.transition-all-500-ms-linear {
+    -webkit-transition: all 0.5s linear;
+    -moz-transition: all 0.5s linear;
+    -o-transition: all 0.5s linear;
+    transition: all 0.5s linear;
+}
+
 .hover-enlarge:hover {
     transform: scale(1.005);
 }
